src/components/Interface/interface.scss
@import '../../assets/styles/vars';

// /. imports

.information {
    display: flex;
    justify-content: space-between;
    padding: 14px;
    border-top: 4px solid $dark-gray-color;
    border-left: 4px solid $dark-gray-color;
    border-bottom: 4px solid $white-color;
    border-right: 4px solid $white-color;

    &__bombs-count,
    &__timer {

        background-color: $dark-color;
        border-top: 1px solid $dark-color;
        border-left: 1px solid $dark-color;
        border-bottom: 1px solid $white-color;
        border-right: 1px solid $white-color;
        height: 45px;

        span {
            padding: 0 2px;
            display: flex;
            width: 100%;
            height: 100%;
            color: $red-color;
            font-family: 'Minecraft', sans-serif;
            font-size: 38px;
            line-height: 45px;
            font-weight: 700;
            border-top: 1px solid $dark-gray-color;
            border-left: 1px solid $dark-gray-color;
            border-bottom: 1px solid $gray-color;
            border-right: 1px solid $gray-color;
        }
    }

    &__status {
        border-top: 1px solid $white-color;
        border-left: 1px solid $white-color;
        border-bottom: 1px solid $dark-color;
        border-right: 1px solid $dark-color;
        width: 45px;
        height: 45px;
        margin: 0 25px;

        button {
            display: flex;
            align-items: center;
            justify-content: center;
            border-top: 1px solid $gray-color;
            border-left: 1px solid $gray-color;
            border-bottom: 1px solid $dark-gray-color;
            border-right: 1px solid $dark-gray-color;
            background-color: $gray-color;
            background-image: url('../../assets/icons/default_emoji-icon.svg');
            background-size: cover;
            background-position: center;
            background-repeat: no-repeat;
            padding: 0;
            cursor: pointer;
            width: 100%;
            height: 100%;
        }
    }

    &__status.finished {
        border: transparent;

        button {
            border: transparent;
        }
    }
}

